Update quiz header for Learning Target 1

--- a/quizzes/lt1.tex
+++ b/quizzes/lt1.tex
@@ -62,8 +62,8 @@
 %\printanswers
 
 
-% \firstpageheader{MATH 228}{\bf\large Learning Target Quiz}{Spring 2024}
-\header{MATH 131}{\bf\large Learning Target 1 Quiz}{Fall 2025}
+% \firstpageheader{MATH 228}{\bf\large Learning Target Quiz}{Spring 2026}
+\header{MATH 131}{\bf\large Learning Target 1 Quiz}{Spring 2026}
 \runningfooter{}{}{Version \version}
 \extrafootheight{-.45 in}
 
