Update quiz header for Spring 2026

--- a/quizzes/lt2.tex
+++ b/quizzes/lt2.tex
@@ -62,7 +62,7 @@
 %\printanswers
 
 
-\header{MATH 131}{\bf\large Learning Target 2 Quiz}{Fall 2025}
+\header{MATH 131}{\bf\large Learning Target 2 Quiz}{Spring 2026}
 \runningfooter{}{}{Version \version}
 \extrafootheight{-.45 in}
 
